--- a/index.html
+++ b/index.html
@@ -1,38 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<title>Two-Column Fixed Layout</title>
- <meta charset="utf-8" />   
-   <link href="styles.css" rel="stylesheet" />
+  <head>
+	<!-- 
+		Final Project CMIS 410
+		Author: Elizabeth 
+		Date: 4/2/24
+		
+		These web pages are for educational purposes only, all content should be considered fictional. 
+	
+	-->
 
-<!--
-Provided 2 column fixed layout in CMIS 410 - for educational purposes only
-Your Name: 
-Today's Date: 
+<meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
+<title>Elite Training</title>
+   <link href="css/styles.css" rel="stylesheet" />
 
--->
+
 </head>
+
 <body>
-<div id="container">
-	<div id="header"> 
-		<img src="samplelogo.png" alt="sample logo" />
-	</div> <!-- header ends here -->
-	<div id="navbar"> 
-		<p>This is the Navbar</p> 
-	</div> <!-- navbar ends here -->
-	<div id="sidebar"> 
-		<p>This is the Sidebar column</p> 
-	</div> <!-- sidebar column ends here -->
-	<div id="main"> 
-		<p>This is the Main column</p> 
-	</div> <!-- main column ends here -->
-	<div id="footer"> 
-		<p>This is the Footer</p> 
-	</div> <!-- footer ends here -->
 
-</div> <!-- container ends here -->
+<div id = "container"> 
 
+<header> 
 
+<a href="index.html"><img src="images/ETLogo.png" alt="Elite Training Logo"/></a>
+
+</header> 
+
+<div id = "wrapper">
+		 
+<nav>  
+	<ul>
+	  <li><a href = "index.html">Home</a></li>
+	  <li><a href = "about.html">About</a></li>
+	  <li><a href = "bookingsessions.html">Booking Sessions</a></li>
+	  <li><a href = "contact.html">Contact</a></li>
+	</ul>
+</nav> 
+	 
+<article id = "main"> 
+
+<h2>Elite Training</h2>
+	<p> Elite Training is a basketball training program for boy and girl basketball players between the middle school level through college level. This program is for athletes who are serious about improving their skill. Not only does Elite Training help you improve as a basketball player physically but mentally as well. </p>
+
+<h3>Elevate Your Game</h3>
+	<p> This program will help basketball players take their skill to the next level. This program is for players who are willing to work hard and be pushed to be the best players they can be. Elite Training is not an easy program to be apart of. Athletes will be pushed to work hard and come to training sessions ready to work. </p>
+<h3>Training Sessions</h3>
+	<p> Training sessions will be depended on the time you book. Athletes are expected to show up early and be ready to start right on time. The training sessions will push athletes to work hard and will help them develop skills that should be improved or not quite ready for the next level. While improving skills the players will also learn no moves to attack the basket and blow by their defenders. Not only will they learn scoring moves but also tips to improve defense and playmaking. </p>
+
+</article> <!-- end main -->
+
+<aside> 
+
+<h3>Training Hours</h3>
+
+	<p>Monday: 8 a.m - 5 p.m.</p>
+	<p>Tuesday: 8 a.m - 5 p.m. </p>
+	<p>Wednesday:  8 a.m. - 5 p.m.</p>
+	<p>Thursday: 8 a.m - 5 p.m.</p>
+	<p>Friday: 8 a.m. - 9 p.m.</p>
+	<p>Saturday: 10 a.m. - 5 p.m.</p>
+	<p>Sunday: closed</p>
+
+<figure>
+  <img src = "images/training.jpg" alt = "Guy dribbling basketball"  />
+
+  <figcaption>
+    <br />
+    
+  </figcaption> 
+</figure>
+
+</aside>   
+
+<footer> 
+
+	<p>Elite Training<br />
+	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
+	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "#">Directions</a> |<a href = "#">Telephone</a> | <a href = "#">Email Us</a></p>
+
+</footer>  
+
+</div> <!-- end wrapper --> 
+</div> <!-- end container -->
 
 </body>
 </html>
