--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+H<!DOCTYPE html>
 <html lang="en">
   <head>
 	<!-- 
@@ -12,7 +12,7 @@
 
 <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
 <title>Elite Training</title>
-   <link href="css/styles.css" rel="stylesheet" />
+   <link href="EHeng/css/styles.css" rel="stylesheet" />
 
 
 </head>
@@ -63,7 +63,7 @@
 	<p>Sunday: closed</p>
 
 <figure>
-  <img src = "images/training.jpg" alt = "Guy dribbling basketball"  />
+  <img src = "EHeng/images/training.jpg" alt = "Guy dribbling basketball"  />
 
   <figcaption>
     <br />
