--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ H<!DOCTYPE html>
 
 <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
 <title>Elite Training</title>
-   <link href="EHeng/css/styles.css" rel="stylesheet" />
+   <link href="css/styles.css" rel="stylesheet" />
 
 
 </head>
@@ -23,7 +23,7 @@ H<!DOCTYPE html>
 
 <header> 
 
-<a href="index.html"><img src="EHeng/images/ETLogo.png" alt="Elite Training Logo"/></a>
+<a href="index.html"><img src="images/ETLogo.png" alt="Elite Training Logo"/></a>
 
 </header> 
 
@@ -63,7 +63,7 @@ H<!DOCTYPE html>
 	<p>Sunday: closed</p>
 
 <figure>
-  <img src = "EHeng/images/training.jpg" alt = "Guy dribbling basketball"  />
+  <img src = "images/training.jpg" alt = "Guy dribbling basketball"  />
 
   <figcaption>
     <br />
