--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ H<!DOCTYPE html>
 
 <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
 <title>Elite Training</title>
-   <link href="css/styles.css" rel="stylesheet" />
+   <link href="CSS/styles.css" rel="stylesheet" />
 
 
 </head>
