--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/ETlogo.png" alt="Elite Training Logo"/></a>
+<a href="index.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
 
 </header> 
 
