--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<p>Sunday: closed</p>
 
 <figure>
-  <img src = "images/training.jpg" alt = "Guy dribbling basketball"  />
+  <img src = "training.jpg" alt = "Guy dribbling basketball"  />
 
   <figcaption>
     <br />
