--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 	-->
 
 <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
-<title>Company Title</title>
+<title>Elite Training</title>
    <link href="styles.css" rel="stylesheet" />
 
 
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/inkwashgallery.jpg" alt="Ink and Wash painting"/></a>
+<a href="index.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
 
 </header> 
 
@@ -32,9 +32,9 @@
 <nav> 
 	<ul>
 	  <li><a href = "index.html">Home</a></li>
-	  <li><a href = "directions.html">Directions</a></li>
-	  <li><a href = "artist.html">Artist Profiles</a></li>
-	  <li><a href = "events.html">Events</a></li>
+	  <li><a href = "about.html">Directions</a></li>
+	  <li><a href = "bookingsessions.html">Artist Profiles</a></li>
+	  <li><a href = "contact.html">Events</a></li>
 	</ul>
 </nav> 
 	 
