--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
+<a href="about.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
 
 </header> 
 
