--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
 	<p>Sunday: 12 p.m - 5 p.m.</p>
 
 <figure>
-  <img src = "images/bamboo.jpg" alt = "Bamboo on old grunge paper"  />
+  <img src = "training.jpg" alt = "Guy dribbling basketball"  />
 
   <figcaption>
     Lorem Ipsum<br />
