--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
 <nav> 
 	<ul>
 	  <li><a href = "index.html">Home</a></li>
-	  <li><a href = "about.html">Directions</a></li>
-	  <li><a href = "bookingsessions.html">Artist Profiles</a></li>
-	  <li><a href = "contact.html">Events</a></li>
+	  <li><a href = "about.html">About</a></li>
+	  <li><a href = "bookingsessions.html">Booking Sessions</a></li>
+	  <li><a href = "contact.html">Contact</a></li>
 	</ul>
 </nav> 
 	 
