--- a/about.html
+++ b/about.html
@@ -40,14 +40,11 @@
 	 
 <article id = "main"> 
 
-<h2>Lorem Ipsum</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl felis, ultricies ac euismod quis, tempus sed orci. Nullam gravida turpis non dolor volutpat fermentum. Donec condimentum rhoncus justo nec tincidunt. Etiam varius mi in tempus rutrum. Aenean vulputate sem velit, eu porta eros iaculis vitae. Donec gravida iaculis libero. In facilisis ac eros finibus lobortis. Nullam et molestie nisi, et vehicula est./p>
-
-<h3>Lorem Ipsum</h3>
+<h2>About Elite Training</h2>
+	<p> Elite Training is a group of athletic trainers that have dedicated their time to improving young atheltes skill. Our training is not all about builidng skill but building character and mental toughness. We make young athletes grow on and off the court. Our program is more than just a basketball program but rather a family. Elite Training instills the values of teamwork, being unselfish, humility, leadership and confidence. </p>
+<h3>Why Training Is Important</h3>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl felis, ultricies ac euismod quis, tempus sed orci. Nullam gravida turpis non dolor volutpat fermentum. Donec condimentum rhoncus justo nec tincidunt. Etiam varius mi in tempus rutrum. Aenean vulputate sem velit, eu porta eros iaculis vitae. Donec gravida iaculis libero. In facilisis ac eros finibus lobortis. Nullam et molestie nisi, et vehicula est.</p>
 
-<h3>Lorem Ipsum</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc nisl felis, ultricies ac euismod quis, tempus sed orci. Nullam gravida turpis non dolor volutpat fermentum. Donec condimentum rhoncus justo nec tincidunt. Etiam varius mi in tempus rutrum. Aenean vulputate sem velit, eu porta eros iaculis vitae. Donec gravida iaculis libero. In facilisis ac eros finibus lobortis. Nullam et molestie nisi, et vehicula est.</p>
 
 </article> <!-- end main -->
 
