--- a/about.html
+++ b/about.html
@@ -50,16 +50,14 @@
 
 <aside> 
 
-<h3>Gallery Hours</h3>
+<h3>What Sets Us Apart</h3>
 
-	<p>Monday: closed</p>
-	<p>Tuesday: 6 p.m. - 9 p.m.</p>
-	<p>Wednesday:  9 a.m. - 5 p.m.</p>
-	<p>Thursday: closed</p>
-	<p>Friday: 6 p.m. - 11 p.m.</p>
-	<p>Saturday: 10 a.m. - 5 p.m.</p>
-	<p>Sunday: 12 p.m - 5 p.m.</p>
-
+	<p> Friendly Staff </p>
+	<p> More than a basketball program but rather a family. </p>
+	<p> Improves young athletes on and off the court. </p>
+	<p> Attention to detail and doing things the right way. </p>
+	<p> Pushes athletes to be the best version of themselves. </p>
+	
 <figure>
   <img src = "training.jpg" alt = "Guy dribbling basketball"  />
 
