--- a/about.html
+++ b/about.html
@@ -59,11 +59,10 @@
 	<p> Pushes athletes to be the best version of themselves. </p>
 	
 <figure>
-  <img src = "training.jpg" alt = "Guy dribbling basketball"  />
+  <img src = "Bgame.jpg" alt = "Basketbal Game"  />
 
   <figcaption>
-    Lorem Ipsum<br />
-    Lorem Ipsum
+    Athletes scrimmage 5v5 using the skills that they have been working on in training sessions. 
   </figcaption> 
 </figure>
 
