--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
 
 <h3>What Sets Us Apart</h3>
 
-	<p> Friendly Staff </p>
-	<p> More than a basketball program but rather a family. </p>
-	<p> Improves young athletes on and off the court. </p>
+	<li> Friendly Staff </li>
+	<li> More than a basketball program but rather a family. </li>
+	<li> Improves young athletes on and off the court. </li>
 	<p> Attention to detail and doing things the right way. </p>
 	<p> Pushes athletes to be the best version of themselves. </p>
 	
@@ -72,10 +72,9 @@
 
 <footer> 
 
-	<p>Company ABC<br />
-	21 State Street &bull; Seattle, WA 24566<br />
+	<p>Elite Training<br />
+	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
 	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "#">Directions</a> |<a href = "#">Telephone</a> | <a href = "#">Email Us</a></p>
-
 </footer>  
 
 </div> <!-- end wrapper --> 
