--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 	<p> Elite Training is a group of athletic trainers that have dedicated their time to improving young atheltes skill. Our training is not all about builidng skill but building character and mental toughness. We make young athletes grow on and off the court. Our program is more than just a basketball program but rather a family. Elite Training instills the values of teamwork, being unselfish, humility, leadership and confidence. </p>
 
 	<figure>
-  <img src = "Bgame.jpg" alt = "Basketbal Game"  />
+  <img src = "Bgame.jpg" alt = "Basketball Game"  />
 
   <figcaption>
     Athletes scrimmage 5v5 using the skills that they have been working on in training sessions. 
@@ -62,8 +62,8 @@
 	<li> Friendly Staff </li>
 	<li> More than a basketball program but rather a family. </li>
 	<li> Improves young athletes on and off the court. </li>
-	<p> Attention to detail and doing things the right way. </p>
-	<p> Pushes athletes to be the best version of themselves. </p>
+	<li> Attention to detail and doing things the right way. </li>
+	<li> Pushes athletes to be the best version of themselves. </li>
 	
 
 
