--- a/about.html
+++ b/about.html
@@ -36,6 +36,16 @@
 	  <li><a href = "bookingsessions.html">Booking Sessions</a></li>
 	  <li><a href = "contact.html">Contact</a></li>
 	</ul>
+
+
+	<figure>
+  <img src = "Bgame.jpg" alt = "Basketball Game"  />
+
+  <figcaption>
+    Athletes scrimmage 5v5 using the skills that they have been working on in training sessions. 
+  </figcaption> 
+</figure>
+
 </nav> 
 	 
 <article id = "main"> 
