--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 
 	<figure>
   <img src = "Bgame.jpg" alt="Basketball Game"  />
-
+	<figcaption>Athletes playing 5v5 utilizing the skills they have learned in training sessions. </figcaption>
 	<h3>Why Training Is Important</h3>
 	<p> Training not only improves an athletes physical skill but also mentally. Training can be hard on your body which can often lead to your brain telling you to quit but you have to push through which will build your mental toughness. To develop your game you have to put work in and work out a lot to next your game to the next level. If you aren't willing to work hard then you won't make it at the next level. The athletes who put the work in and take it seriously are the athletes who are successful and will continue to be succesful if they maintain that work ethic. </p>
 
