--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 	<p>Elite Training<br />
 	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
-	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "#">Directions</a> |<a href = "#">Telephone</a> | <a href = "#">Email Us</a></p>
+	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "https://www.google.com/maps">Directions</a> |<a href = "#">Telephone</a> | <a href = "#">Email Us</a></p>
 
 </footer>  
 
