--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 <h2>Elite Training</h2>
 	<p> Elite Training is a basketball training program for boy and girl basketball players between the middle school level through college level. This program is for athletes who are serious about improving their skill. Not only does Elite Training help you improve as a basketball player physically but mentally as well. </p>
 
-<h3>Elevate Your Game</h3>
+<iframe width="420" height="345" src="https://www.youtube.com/embed/watch?v=asr1iJixx-Q">
+</iframe>
+	<h3>Elevate Your Game</h3>
 	<p> This program will help basketball players take their skill to the next level. This program is for players who are willing to work hard and be pushed to be the best players they can be. Elite Training is not an easy program to be apart of. Athletes will be pushed to work hard and come to training sessions ready to work. </p>
 <h3>Training Sessions</h3>
 	<p> Training sessions will be depended on the time you book. Athletes are expected to show up early and be ready to start right on time. The training sessions will push athletes to work hard and will help them develop skills that should be improved or not quite ready for the next level. While improving skills the players will also learn no moves to attack the basket and blow by their defenders. Not only will they learn scoring moves but also tips to improve defense and playmaking. </p>
