--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 <h2>Elite Training</h2>
 	<p> Elite Training is a basketball training program for boy and girl basketball players between the middle school level through college level. This program is for athletes who are serious about improving their skill. Not only does Elite Training help you improve as a basketball player physically but mentally as well. </p>
 
-<iframe width="420" height="345" src="https://www.youtube.com/embed/watch?v=asr1iJixx-Q" title="YouTube Video">
-</iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/asr1iJIxx-Q?si=nogHF7jghvoWvwV6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+	
+	
+
 	<h3>Elevate Your Game</h3>
 	<p> This program will help basketball players take their skill to the next level. This program is for players who are willing to work hard and be pushed to be the best players they can be. Elite Training is not an easy program to be apart of. Athletes will be pushed to work hard and come to training sessions ready to work. </p>
 <h3>Training Sessions</h3>
