--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -12,7 +12,7 @@
 
 <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
 <title>Elite Training</title>
-   <link href="CSS/styles.css" rel="stylesheet" />
+   <link href="styles.css" rel="stylesheet" />
 
 
 </head>
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/ETlogo.png" alt="Elite Training Logo"/></a>
+<a href="index.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
 
 </header> 
 
@@ -40,13 +40,22 @@
 	 
 <article id = "main"> 
 
-<h2>Elite Training</h2>
-	<p> Elite Training is a basketball training program for boy and girl basketball players between the middle school level through college level. This program is for athletes who are serious about improving their skill. Not only does Elite Training help you improve as a basketball player physically but mentally as well. </p>
+<h2>Type of Sessions</h2>
+	<li> Individual </li>
+	<li> Small Group (2-4) </li>
+	<li> Group (5-10) </li>
+	<li> Team (11-15) </li>
+	
+	
 
-<h3>Elevate Your Game</h3>
-	<p> This program will help basketball players take their skill to the next level. This program is for players who are willing to work hard and be pushed to be the best players they can be. Elite Training is not an easy program to be apart of. Athletes will be pushed to work hard and come to training sessions ready to work. </p>
-<h3>Training Sessions</h3>
-	<p> Training sessions will be depended on the time you book. Athletes are expected to show up early and be ready to start right on time. The training sessions will push athletes to work hard and will help them develop skills that should be improved or not quite ready for the next level. While improving skills the players will also learn no moves to attack the basket and blow by their defenders. Not only will they learn scoring moves but also tips to improve defense and playmaking. </p>
+<h3>Pricing</h3>
+	<p> The pricing will fluctuate depending on the amound of people involved in the trainign session but the starting out prices will be listed below.
+	<li> Individual: $50/hr </li>
+	<li> Small Group: $30/hr for each athlete </li>
+	<li> Group: $25/hr for each athlete</li>
+	<li> Team: TBD </li>
+	
+	</p>
 
 </article> <!-- end main -->
 
@@ -63,7 +72,7 @@
 	<p>Sunday: closed</p>
 
 <figure>
-  <img src = "images/training.jpg" alt = "Guy dribbling basketball"  />
+  <img src = "training.jpg" alt = "Guy dribbling basketball"  />
 
   <figcaption>
     <br />
