--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -42,20 +42,21 @@
 
 <h2>Type of Sessions</h2>
 	<li> Individual </li>
-	<li> Small Group (2-4) </li>
-	<li> Group (5-10) </li>
-	<li> Team (11-15) </li>
+	<li> Small Group (2-4) athletes </li>
+	<li> Group (5-10) athletes </li>
+	<li> Team (11-15) athletes </li>
 	
 	
 
 <h3>Pricing</h3>
-	<p> The pricing will fluctuate depending on the amound of people involved in the trainign session but the starting out prices will be listed below.
+	<p> The pricing will fluctuate depending on the amound of people involved in the trainign session but the starting out prices will be listed below. </p>
+	
 	<li> Individual: $50/hr </li>
 	<li> Small Group: $30/hr for each athlete </li>
 	<li> Group: $25/hr for each athlete</li>
 	<li> Team: TBD </li>
 	
-	</p>
+	
 
 </article> <!-- end main -->
 
