--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -41,6 +41,7 @@
 <article id = "main"> 
 
 <h2>Type of Sessions</h2>
+	<p> There are different types of sessions that you can book. The types of sessions are listed below. </p>
 	<li> Individual </li>
 	<li> Small Group (2-4) athletes </li>
 	<li> Group (5-10) athletes </li>
@@ -62,15 +63,15 @@
 
 <aside> 
 
-<h3>Training Hours</h3>
+<h3>Motivation </h3>
 
-	<p>Monday: 8 a.m - 5 p.m.</p>
-	<p>Tuesday: 8 a.m - 5 p.m. </p>
-	<p>Wednesday:  8 a.m. - 5 p.m.</p>
-	<p>Thursday: 8 a.m - 5 p.m.</p>
-	<p>Friday: 8 a.m. - 9 p.m.</p>
-	<p>Saturday: 10 a.m. - 5 p.m.</p>
-	<p>Sunday: closed</p>
+	<p>“A winner is someone who recognizes his God-given talents, works his tail off to develop them into skills, and uses these skills to accomplish his goals.”
+― Larry Bird</p>
+	<p>“Success is a result of consistent practice of winning skills and actions. There is nothing miraculous about the process. There is no luck involved.”
+― Bill Russell. </p>
+	<p>“There are only two options regarding commitment. You’re either in, or you’re out. There’s no such thing as ‘life in-between’.”
+― Pat Riley</p>
+	<p> You may recognize these names but you only recognize them because they trained hard and made names for themselves. To be successful in basketball you got to work hard and put time into developing your craft. Without working hard and competing you won't be like these legends.</p>
 
 <figure>
   <img src = "training.jpg" alt = "Guy dribbling basketball"  />
