--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -79,7 +79,7 @@
 
 
 <figure>
-  <img src = "quote.jpg" alt = "Basketball Quote"  />
+  <img src = "Quote.jpg" alt = "Basketball Quote"  />
 
   <figcaption>
     <br />
