--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -42,12 +42,12 @@
 
 <h2>Type of Sessions</h2>
 	<p> There are different types of sessions that you can book. The types of sessions are listed below. </p>
-	<li> Individual </li>
-	<li> Small Group: (2-4) athletes </li>
-	<li> Group: (5-10) athletes </li>
-	<li> Team: (11-15) athletes </li>
+	<p> Individual </p>
+	<p> Small Group: (2-4) athletes </p>
+	<p> Group: (5-10) athletes </p>
+	<p> Team: (11-15) athletes </p>
 		
-<form id="survey" action="http://www.example.com/redball/survey" method="post">
+<form id="survey" action="http://www.example.com/redball/survey" method="post" />
     	<fieldset id="custInfo">
     		<legend>Customer Information</legend>
     			<div class="formRow">
@@ -90,12 +90,6 @@
     		
     	</fieldset>
 
-
-
-	
-
-	
-
 </article> <!-- end main -->
 
 <aside> 
@@ -103,16 +97,11 @@
 <h3>Pricing</h3>
 	<p> The pricing will fluctuate depending on the amound of people involved in the trainign session but the starting out prices will be listed below. </p>
 	
-	<li> Individual: $50/hr </li>
-	<li> Small Group: $30/hr for each athlete </li>
-	<li> Group: $25/hr for each athlete</li>
-	<li> Team: TBD </li>
-	
+	<p> Individual: $50/hr </p>
+	<p> Small Group: $30/hr for each athlete </p>
+	<p> Group: $25/hr for each athlete</p>
+	<p> Team: TBD </p>
 
-
-    
-  </figcaption> 
-</figure>
 
 </aside>   
 
@@ -120,7 +109,7 @@
 
 	<p>Elite Training<br />
 	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
-	<a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel: +8438032107" target="(843)-8032107"">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
+	<a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
 
 </footer>  
 
