--- a/about.html
+++ b/about.html
@@ -42,13 +42,14 @@
 	 
 <article id = "main"> 
 
-<h2>About Elite Training</h2>
+<h1>About Elite Training</h1>
 	<p> Elite Training is a group of athletic trainers that have dedicated their time to improving young atheltes skill. Our training is not all about builidng skill but building character and mental toughness. We make young athletes grow on and off the court. Our program is more than just a basketball program but rather a family. Elite Training instills the values of teamwork, being unselfish, humility, leadership and confidence. </p>
 
 	<figure>
   <img src = "Bgame.jpg" alt="Basketball Game"  />
 	<figcaption>Athletes playing 5v5 utilizing the skills they have learned in training sessions. </figcaption>
-	<h3>Why Training Is Important</h3>
+	</figure>
+		<h2>Why Training Is Important</h2>
 	<p> Training not only improves an athletes physical skill but also mentally. Training can be hard on your body which can often lead to your brain telling you to quit but you have to push through which will build your mental toughness. To develop your game you have to put work in and work out a lot to next your game to the next level. If you aren't willing to work hard then you won't make it at the next level. The athletes who put the work in and take it seriously are the athletes who are successful and will continue to be succesful if they maintain that work ethic. </p>
 
 </article> <!-- end main -->
@@ -57,11 +58,11 @@
 
 <h3>What Sets Us Apart</h3>
 
-	<li> Friendly Staff </li>
-	<li> More than a basketball program but rather a family. </li>
-	<li> Improves young athletes on and off the court. </li>
-	<li> Attention to detail and doing things the right way. </li>
-	<li> Pushes athletes to be the best version of themselves. </li>
+	<p> Friendly Staff </p>
+	<p> More than a basketball program but rather a family. </p>
+	<p> Improves young athletes on and off the court. </p>
+	<p> Attention to detail and doing things the right way. </p>
+	<p> Pushes athletes to be the best version of themselves. </p>
 	
 
 
@@ -71,7 +72,7 @@
 
 <p>Elite Training<br />
 	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
-	<a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel: +8438032107" target="(843)-8032107"">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
+	<a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
 
 </footer>  
 
