--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -42,10 +42,10 @@
 
 <h2>Type of Sessions</h2>
 	<p> There are different types of sessions that you can book. The types of sessions are listed below. </p>
-	<p> Individual </p>
-	<p> Small Group: (2-4) athletes </p>
-	<p> Group: (5-10) athletes </p>
-	<p> Team: (11-15) athletes </p>
+	<li> Individual </li>
+	<li> Small Group: (2-4) athletes </li>
+	<li> Group: (5-10) athletes </li>
+	<li> Team: (11-15) athletes </li>
 		
 <form id="survey" action="http://www.example.com/redball/survey" method="post" />
     	<fieldset id="custInfo">
