--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -97,10 +97,10 @@
 <h3>Pricing</h3>
 	<p> The pricing will fluctuate depending on the amound of people involved in the trainign session but the starting out prices will be listed below. </p>
 	
-	<p> Individual: $50/hr </p>
-	<p> Small Group: $30/hr for each athlete </p>
-	<p> Group: $25/hr for each athlete</p>
-	<p> Team: TBD </p>
+	<li> Individual: $50/hr </li>
+	<li> Small Group: $30/hr for each athlete </li>
+	<li> Group: $25/hr for each athlete</li>
+	<li> Team: TBD </li>
 
 
 </aside>   
