--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <meta http-equiv = "Content-Type" content = "text/html; charset=utf-8" />
 <title>Elite Training</title>
-   <link href="CSS/styles.css" rel="stylesheet" />
+   <link href="styles.css" rel="stylesheet" />
 
 
 </head>
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/ETlogo.png" alt="Elite Training Logo"/></a>
+<a href="index.html"><img src="ETlogo.png" alt="Elite Training Logo"/></a>
 
 </header> 
 
