--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -40,13 +40,52 @@
 	 
 <article id = "main"> 
 
-<h2>Type of Sessions</h2>
+	<table>
+		<tr>
+		<th>Group Size</th>
+		<th>Type of Session</th>
+		<th>Pricing</th>	
+		</tr>
+	<tr>
+		<td>1</td>
+		<td>Individual</td>
+		<td>$50/hr</td>
+	</tr>
+		<tr>
+		<td>2-4</td>
+		<td>Small Group</td>
+		<td>$30/hr for each athlete</td>
+	</tr>
+
+		<tr>
+		<td>5-19</td>
+		<td>Group</td>
+		<td>$25/hr for each athlete</td>
+	</tr>
+
+		<tr>
+		<td>11-15</td>
+		<td>Team</td>
+		<td>TBD after discussion</td>
+	</tr>
+
+		
+	</table>
+
+	
+	
+	<h2>Type of Sessions</h2>
 	<p> There are different types of sessions that you can book. The types of sessions are listed below. </p>
 	<li> Individual </li>
 	<li> Small Group: (2-4) athletes </li>
 	<li> Group: (5-10) athletes </li>
 	<li> Team: (11-15) athletes </li>
 		
+
+
+</article> <!-- end main -->
+
+<aside> 
 <form id="survey" action="http://www.example.com/redball/survey" method="post" />
     	<fieldset id="custInfo">
     		<legend>Customer Information</legend>
@@ -89,10 +128,6 @@
     	<label for="mailCB">Add me to your mailing list to recieve updates about Elite Training. </label>
     		
     	</fieldset>
-
-</article> <!-- end main -->
-
-<aside> 
 
 <h3>Pricing</h3>
 	<p> The pricing will fluctuate depending on the amound of people involved in the trainign session but the starting out prices will be listed below. </p>
