--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -41,6 +41,7 @@
 <article id = "main"> 
 
 	<table>
+		<tbody>
 		<tr>
 		<th>Group Size</th>
 		<th>Type of Session</th>
@@ -69,6 +70,7 @@
 		<td>TBD after discussion</td>
 	</tr>
 
+		</tbody>
 		
 	</table>
 
