--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -40,7 +40,7 @@
 	 
 <article id = "main"> 
 
-	<table>
+	<table class="sessions">
 		<tbody>
 		<tr>
 		<th>Group Size</th>
@@ -72,7 +72,7 @@
 
 		</tbody>
 		
-	</table>
+	</table class="sessions>
 
 	
 	
