--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -70,7 +70,7 @@
          	</tr>
          
          	<tr> 
-         		<th>7:00 PM</th>
+         		<th>5-10 Athletes</th>
          			<td rowspan="2">Opera Fest</td>
          			<td rowspan="2">Radio U</td>
          			<td rowspan="2">Science Week</td>
@@ -82,7 +82,7 @@
          	</tr>
          
          <tr>
-         	<th>7:30 PM</th>
+         	<th>11-15 Athletes</th>
          	<td>Brain Stew</td>
          	<td>Bismark Forum</td>
          </tr>
