--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -38,7 +38,7 @@
 	</ul>
 </nav> 
 	 
-        <article>
+        <article id = "main">
          <table class="schedule"> 
          	
          	<colgroup>
@@ -134,8 +134,7 @@
    </div>
 	
 	
-	
-</body>
+
 </article>
 	<!-- end main -->
 
