--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -140,7 +140,9 @@
 	<!-- end main -->
 
 	<aside> 
-<h2>Training Hours</h2>
+
+<h3>Training Hours</h3>
+	
 	<p>Monday: 8 a.m - 5 p.m.</p>
 	<p>Tuesday: 8 a.m - 5 p.m. </p>
 	<p>Wednesday:  8 a.m. - 5 p.m.</p>
@@ -149,6 +151,17 @@
 	<p>Saturday: 10 a.m. - 5 p.m.</p>
 	<p>Sunday: closed</p>
 
+<figure>
+  <img src = "training.jpg" alt = "Guy dribbling basketball"  />
+
+  <figcaption>
+    <br />
+    
+  </figcaption> 
+</figure>
+
+
+		
 </aside>   
 
 	
