--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -139,10 +139,19 @@
 
 	<!-- end main -->
 
-	
-	
+	<aside>
 
-	
+	<p>Monday: 8 a.m - 5 p.m.</p>
+	<p>Tuesday: 8 a.m - 5 p.m. </p>
+	<p>Wednesday:  8 a.m. - 5 p.m.</p>
+	<p>Thursday: 8 a.m - 5 p.m.</p>
+	<p>Friday: 8 a.m. - 9 p.m.</p>
+	<p>Saturday: 10 a.m. - 5 p.m.</p>
+	<p>Sunday: closed</p>
+
+
+		
+	</aside>
 
 <footer> 
 
