--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -90,7 +90,7 @@
          </table>
       </section>
      
-		 <h3> Booking A Session </h3>
+		 <h> Booking A Session </h>
      <p> To schedule a training session please fill out the form below. Once the form is completed we will get back to as soon as possible with what slots we have available. </p>
 <form id="survey" action="http://www.example.com/redball/survey" method="post" />
     	<fieldset id="custInfo">
@@ -139,7 +139,9 @@
 
 	<!-- end main -->
 
-	<aside>
+	<aside> 
+
+<h3>Training Hours</h3>
 
 	<p>Monday: 8 a.m - 5 p.m.</p>
 	<p>Tuesday: 8 a.m - 5 p.m. </p>
@@ -150,9 +152,12 @@
 	<p>Sunday: closed</p>
 
 
-		
-	</aside>
+ 
+    
+  </figcaption> 
+</figure>
 
+</aside>   
 <footer> 
 
 	<p>Elite Training<br />
