--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -141,6 +141,27 @@
 
 	<!-- end main -->
 
+<aside> 
+
+<h3>Training Hours</h3>
+
+	<p>Monday: 8 a.m - 5 p.m.</p>
+	<p>Tuesday: 8 a.m - 5 p.m. </p>
+	<p>Wednesday:  8 a.m. - 5 p.m.</p>
+	<p>Thursday: 8 a.m - 5 p.m.</p>
+	<p>Friday: 8 a.m. - 9 p.m.</p>
+	<p>Saturday: 10 a.m. - 5 p.m.</p>
+	<p>Sunday: closed</p>
+
+
+ 
+    
+  </figcaption> 
+</figure>
+
+</aside> 
+
+	
 	
 <footer> 
 
