--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -132,7 +132,7 @@
     			</div>
     			
     	</fieldset>
-
+	 </forms>
 
 	 </article>
 	</div>
@@ -154,7 +154,7 @@
 </footer>  
 
 </div> <!-- end wrapper --> 
-</div> <!-- end container -->
+
 
 </body>
 </html>
