--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -93,7 +93,7 @@
      
 		 <h3> Booking A Session </h3>
      <p> To schedule a training session please fill out the form below. Once the form is completed we will get back to as soon as possible with what slots we have available. </p>
-<form id="survey" action="http://www.example.com/redball/survey" method="post" />
+<p><form id="survey" action="http://www.example.com/redball/survey" method="post" /></form>
     	<fieldset id="custInfo">
     		<legend>Customer Information</legend>
     			<div class="formRow">
