--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -90,7 +90,8 @@
 
          </table>
 	 </section>
-     
+
+		<article>
 		 <h3> Booking A Session </h3>
      <p> To schedule a training session please fill out the form below. Once the form is completed we will get back to as soon as possible with what slots we have available. </p>
 <form id="survey" action="http://www.example.com/redball/survey" method="post" />
@@ -132,15 +133,29 @@
     			</div>
     			
     	</fieldset>
+	</article>
+
+
 	
-
-
-	</div>
 	
 	
 
 	<!-- end main -->
 
+<aside> 
+
+<h3>Training Hours</h3>
+
+	<p>Monday: 8 a.m - 5 p.m.</p>
+	<p>Tuesday: 8 a.m - 5 p.m. </p>
+	<p>Wednesday:  8 a.m. - 5 p.m.</p>
+	<p>Thursday: 8 a.m - 5 p.m.</p>
+	<p>Friday: 8 a.m. - 9 p.m.</p>
+	<p>Saturday: 10 a.m. - 5 p.m.</p>
+	<p>Sunday: closed</p>
+
+
+</aside>   
 
 
 	
