--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -162,7 +162,7 @@
 	
 <footer> 
 
-	<p>Elite Training<br />
+	<p>Elite Training</p>
 	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
 	<a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
 
