--- a/bookingsessions.html
+++ b/bookingsessions.html
@@ -91,7 +91,7 @@
          </table>
 	 
 
-		<article>
+		
 		 <h3> Booking A Session </h3>
      <p> To schedule a training session please fill out the form below. Once the form is completed we will get back to as soon as possible with what slots we have available. </p>
 <form id="survey" action="http://www.example.com/redball/survey" method="post" />
@@ -162,8 +162,8 @@
 	
 <footer> 
 
-	<p>Elite Training</p>
-	<br>2123 Success Blvd &bull; Myrtle Beach, SC 29577</br> 
+	<p>Elite Training<br />
+	<p>2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
 	<p><a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
 
 </footer>  
