--- a/contact.html
+++ b/contact.html
@@ -82,11 +82,10 @@
 <footer> 
 
 	<p>Elite Training<br />
-	2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
-	<a href = "https://facebook.com" target="_blank">Facebook</a> | <a href = "#">Directions</a> |<a href = "#">Telephone</a> | <a href = "#">Email Us</a></p>
+	<p>2123 Success Blvd &bull; Myrtle Beach, SC 29577<br />
+	<p><a href = "https://facebook.com" target="-blank">Facebook</a> | <a href = "https://instagram.com" target="-blank">Instagram</a> |<a href = "tel:+8438032107" target="(843)-8032107">Telephone</a> | <a href = "elitetraining@gmail.com" target="-blank">Email</a></p>
 
 </footer>  
-
 </div> <!-- end wrapper --> 
 </div> <!-- end container -->
 
