--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
     			<label for="mail">E-mail*</label>
     			<input name="custEmail" id="mail" type="email" />
 			</div>
+		<div id="buttons">
+			<input type="Submit" value="Submit my Information" >
+				<input type="Cancel" value="Cancel" >
 			</form>
 </fieldset>
 	
